<resources>
    <string name="app_name">CrossTech Future</string>
    <string name="dashboard_tab">Dashboard</string>
    <string name="tasks_tab">Tasks</string>
    <string name="milestones_tab">Milestones</string>
    <string name="stats_tab">Statistics</string>
    <string name="ongoing_devotion">Ongoing Devotion</string>
    <string name="tap_to_devote_now">Tap to devote now</string>
    <string name="scheduled_today">Scheduled Today</string>
    <string name="time_empty">--:--:--</string>
    <string name="open">Open</string>
    <string name="completed">Completed</string>
    <string name="archived">Archived</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planned">Planned</string>
    <string name="scheduled">Scheduled</string>
    <string name="scheduled_start">Scheduled start</string>
    <string name="app_deadline">Approaching Deadline</string>
    <string name="add_task">Add task</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="creation_date">Creation date</string>
    <string name="time">Time</string>
    <string name="urgency">URGENCY</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="difficulty_slider">Difficulty slider</string>
    <string name="urgency_slider">Urgency slider</string>
    <string name="mark_as_important">Mark as important</string>
    <string name="also_schedule_this_task">Also schedule this task</string>
    <string name="planned_date">Planned date</string>
    <string name="set_a_deadline">Set a deadline</string>
    <string name="deadline_date">Deadline date</string>
    <string name="remind_me_of_schedule_or_deadline">Remind me of schedule (and deadline)</string>
    <string name="invalid_time_planned_creation">Planned time is before creation time</string>
    <string name="at_around">At around …</string>
    <string name="plan_to_do">Planned to do this on …</string>
    <string name="deadline_on">Deadline is on …</string>
    <string name="invalid_time_ddl_scheduled">Deadline is before scheduled time</string>
    <string name="save">Save</string>
    <string name="invalid_name">Name is empty</string>
    <string name="cancelled">Cancelled</string>
    <string name="closed">Closed</string>
    <string name="memory_usage">Save Size</string>
    <string name="add_a_milestone">Add a milestone</string>
    <string name="edit">Edit</string>
    <string name="no_open_tasks">No open tasks</string>
    <string name="create_milestone">Create Milestone</string>
    <string name="cancel">Cancel</string>
    <string name="devotions">Devotions</string>
    <string name="hours">Hours</string>
    <string name="ongoing">Ongoing</string>
    <string name="commitments">Commitments</string>
    <string name="empty_commit_time">-:--</string>
    <string name="no_commits">No commits</string>
    <string name="started">Started</string>
    <string name="commit_to_the_skill_now">Commit to the skill now</string>
    <string name="date">Date</string>
    <string name="commitment_summary">Commitment summary</string>
    <string name="starting_commit_date">Starting or concluding this commitment on...</string>
    <string name="start_a_new_commit">Start a new commitment</string>
    <string name="conclude_current_commit">Conclude current commitment</string>
    <string name="at">At...</string>
    <string name="discard">Discard</string>
    <string name="discard_confirmation">Discard this ongoing commitment? This action cannot be undone</string>
</resources>