<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.milestones.CommitFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/task_card_margin">

        <TextView
            android:id="@+id/msTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:gravity="center_vertical"
            android:textSize="@dimen/hash_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Dummy Milestone"
            android:textColor="@color/secondaryTextColor"
            android:layout_marginStart="@dimen/card_title_padding"
            android:layout_marginEnd="@dimen/card_title_padding" />

        <TextView
            android:id="@+id/msDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_title_padding"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/worksans_regul"
            android:gravity="center_vertical"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/card_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msTitle"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/msDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/msDescription"
                app:cardCornerRadius="@dimen/card_radius"
                android:elevation="@dimen/card_elevation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/task_padding"
                    android:id="@+id/ongoing_card">

                    <TextView
                        android:id="@+id/devotionTimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/hash_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="00:05:42"
                        android:textColor="@color/primaryLightColor" />

                    <LinearLayout
                        android:id="@+id/linear_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/ongoing_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/task_summary_text"
                            android:text="@string/ongoing_devotion"
                            android:textColor="@color/secondaryTextColor" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:textSize="12sp"
                                android:text="@string/started"
                                android:textColor="@color/purple_200" />

                            <TextView
                                android:id="@+id/ongoingStart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                tools:text="2022-05-07 18:45"
                                android:textColor="@color/secondaryTextColor" />
                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/devotionTimer"
                        app:layout_constraintRight_toRightOf="parent"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:textColor="@color/purple_200"
                        android:text="@string/save"
                        android:id="@+id/save_ongoing" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/devotionTimer"
                        app:layout_constraintRight_toLeftOf="@id/save_ongoing"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:textColor="@color/purple_200"
                        android:text="@string/discard"
                        android:id="@+id/discard_ongoing" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commit_to_the_skill_now"
                android:id="@+id/empty_list_btn" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/task_padding"
                android:id="@+id/commit_recycler" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_commit_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/add_task"
            app:tint="@color/white"
            android:contentDescription="@string/add_task" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>