<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_radius"
    android:layout_margin="@dimen/task_card_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/task_card_margin">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:gravity="center_vertical"
            android:textSize="@dimen/hash_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Dummy Milestone"
            android:textColor="@color/secondaryTextColor"
            android:layout_marginStart="@dimen/card_title_padding"
            android:layout_marginEnd="@dimen/card_title_padding" />

        <TextView
            android:id="@+id/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:gravity="center_vertical"
            android:textSize="@dimen/card_title_text_size"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
            android:textColor="@color/secondaryTextColor"
            android:layout_marginStart="@dimen/card_title_padding"
            android:layout_marginEnd="@dimen/card_title_padding" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/statsPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/descText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="@dimen/card_title_padding"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/leftPanel"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/card_title_text_size"
                    app:layout_constraintTop_toBottomOf="@id/titleText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/open"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_marginStart="@dimen/card_title_padding"
                    android:layout_marginEnd="@dimen/card_title_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center"
                    android:textSize="@dimen/card_title_text_size"
                    app:layout_constraintTop_toBottomOf="@id/titleText"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_marginStart="@dimen/card_title_padding"
                    android:layout_marginEnd="@dimen/card_title_padding" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/midPanel"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/card_title_text_size"
                    app:layout_constraintTop_toBottomOf="@id/titleText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/closed"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_marginStart="@dimen/card_title_padding"
                    android:layout_marginEnd="@dimen/card_title_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center"
                    android:textSize="@dimen/card_title_text_size"
                    app:layout_constraintTop_toBottomOf="@id/titleText"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="15"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_marginStart="@dimen/card_title_padding"
                    android:layout_marginEnd="@dimen/card_title_padding" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rightPanel"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/card_title_text_size"
                    app:layout_constraintTop_toBottomOf="@id/titleText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/archived"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_marginStart="@dimen/card_title_padding"
                    android:layout_marginEnd="@dimen/card_title_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center"
                    android:textSize="@dimen/card_title_text_size"
                    app:layout_constraintTop_toBottomOf="@id/titleText"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="28"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_marginStart="@dimen/card_title_padding"
                    android:layout_marginEnd="@dimen/card_title_padding" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/statsPanel"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/edit"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:textColor="@color/purple_200"
            app:icon="@drawable/edit"
            app:iconTint="@color/purple_200"
            android:layout_marginEnd="@dimen/card_title_padding" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/statsPanel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:chipIcon="@drawable/commit"
            tools:text="8ad4f9b"
            android:textAppearance="@style/AppTheme.HashChip"
            android:layout_marginStart="@dimen/card_title_padding" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>